[tool.poetry]
name = "langchain-neo4j-rag-app"
version = "0.1.0"
description = "An increasingly comprehensive RAG app with LangChain, Neo4j, and more"
authors = ["hfhoffman1144 <hfh160130@utdallas.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pre-commit = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
